# TechEndeavorBackend

./: .env.sample  .gitignore  main.py  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  crud.py  database.py  main.py  models.py  schemas.py
